# Chronicle

./: .gitignore  POSTGRES_SETUP.md  README.md  TEST_COVERAGE_ASSESSMENT.md  agent.py  dependencies.py  docker-compose.yml  pyproject.toml  setup_postgres.sh
demo/: README.md  __init__.py  api.py  app.py  capture.py  database.py  models.py  requirements.txt  run.py  simulator.py  telemetry.py
integrations/: __init__.py  fastapi.py  sampling.py  ui.py
tests/: README.md  TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  run_tests.py  run_tests.sh
tests/demo/: __init__.py  test_api_from_captures.py  test_api_uncaptured.py  test_database.py  test_edge_cases.py  test_helpers.py  test_integration.py
tests/fixtures/: chronicle_captures_20260120_210049.json
