[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "behaviorflow"
version = "0.1.0"
description = "Capture, replay, and intelligently refactor backend services"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = [
    "testing",
    "refactoring",
    "observability",
    "replay",
    "regression",
    "opentelemetry",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.28.0",
]
full = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.28.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pkaiserui/Chronicle"
Documentation = "https://github.com/pkaiserui/Chronicle#readme"
Repository = "https://github.com/pkaiserui/Chronicle"
Issues = "https://github.com/yourname/pkaiserui/issues"

[project.scripts]
behaviorflow = "Chronicle.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["Chronicle"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
